--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,10 @@
     <title>MundiPagg - Library</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/images/icon.png" type="image/png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/icon_32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/icon_192x192.png">
+    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <!-- bower:css -->
     <!-- endinject -->
     <!-- inject:css -->
